--- a/styles.css
+++ b/styles.css
@@ -30,22 +30,31 @@ body{
 
 .container{
     padding: 10px 10%;
+    
+    
 
 }
 
 nav{
+    background: black;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+   
+    
+
 }
 
 .logo{
+    
+
     width: 200px;
 
 }
 
 nav ul li{
+    
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
